--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<docker.image.prefix>springio</docker.image.prefix>
 	</properties>
 
 	<dependencies>
@@ -49,12 +50,29 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+        	<groupId>com.hazelcast</groupId>
+        	<artifactId>hazelcast</artifactId>
+    	</dependency>
+    	<dependency>
+        	<groupId>com.hazelcast</groupId>
+        	<artifactId>hazelcast-spring</artifactId>
+    </dependency>
+    <dependency>
+	    <groupId>org.springframework.session</groupId>
+		<artifactId>spring-session</artifactId>
+		<version> 1.3.1.RELEASE</version>
+    </dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-			<version>2.1.3.RELEASE</version>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
